--- a/package.json
+++ b/package.json
@@ -1,30 +1,23 @@
 {
-  "name": "schoolsite-backend",
+  "name": "school-backend",
   "version": "1.0.0",
-  "type": "module",
-  "license": "MIT",
+  "description": "Backend for the school website, deployed on Vercel.",
+  "main": "index.ts",
   "scripts": {
-    "dev": "tsx watch server/index.ts",
-    "build": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc --noEmit",
-    "format": "prettier --write ."
+    "start": "ts-node index.ts"
   },
   "dependencies": {
-    "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "mysql2": "^3.15.3",
+    "dotenv": "^17.2.3",
     "nanoid": "^5.1.5",
-    "streamdown": "^1.4.0",
-    "zod": "^4.1.12"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
-    "@types/dotenv": "^8.2.3",
     "@types/express": "4.17.21",
     "@types/node": "^24.7.0",
-    "esbuild": "^0.25.0",
-    "prettier": "^3.6.2",
-    "tsx": "^4.19.1",
+    "@types/cors": "^2.8.17",
+    "ts-node": "^10.9.2",
     "typescript": "5.6.3"
   }
 }
