--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-ADMIN_USERNAME=admin\nADMIN_PASSWORD=password123\nFRONTEND_URL=http://localhost:5173
+DB_HOST=srv1365.hstgr.io
+DB_USER=u576196745_huhuhaha
+DB_PASSWORD=Lyatripeni17!
+DB_DATABASE=u576196745_huhuhaha
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=password
