--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ DB_USER=u576196745_huhuhaha
 DB_PASSWORD=Lyatripeni17!
 DB_DATABASE=u576196745_huhuhaha
 ADMIN_USERNAME=admin
-ADMIN_PASSWORD=password\nFRONTEND_URL=https://school-frontend-opal.vercel.app
+ADMIN_PASSWORD=password
+FRONTEND_URL=https://school-frontend-opal.vercel.app
