--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ DB_PASSWORD=Lyatripeni17!
 DB_DATABASE=u576196745_huhuhaha
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=password
+
+# Local Development Configuration
+FRONTEND_URL=https://3000-izoxz9yu03gnhqaf1l3ey-b4679c93.manus-asia.computer
+PORT=3000
